--- a/package.json
+++ b/package.json
@@ -2,25 +2,29 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "buble": "^0.19.3",
-    "buble-loader": "^0.5.1",
-    "cross-env": "^5.1.5",
-    "css-loader": "^0.28.11",
-    "mini-css-extract-plugin": "^0.4.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
-    "serve": "^6.5.5",
-    "style-loader": "^0.21.0",
-    "svelte": "^2.0.0",
-    "svelte-loader": "2.9.1",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.0.14",
-    "webpack-serve": "^1.0.2"
+    "npm-run-all": "^4.1.3",
+    "rollup": "^0.62.0",
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-svelte": "^4.1.0",
+    "rollup-plugin-uglify": "^4.0.0",
+    "serve": "^9.1.0",
+    "svelte": "^2.9.1",
+    "cross-env": "^5.2.0",
+    "rollup-plugin-scss": "^0.4.0"
   },
-  "scripts": {
+  "webpack-scripts": {
     "build": "cross-env NODE_ENV=production webpack && yarn transpile",
     "transpile": "cross-env NODE_ENV=production buble dist/bundle.js > dist/x.js && mv dist/x.js dist/bundle.js",
     "dev": "yarn run clean && webpack-serve --content public --hot --port 8000",
     "clean": "rimraf public/bundle*"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "autobuild": "rollup -c -w",
+    "dev": "rimraf public/fsss.* && run-p start autobuild",
+    "start": "serve public --listen 8000"
   },
   "dependencies": {
     "swiper": "^4.3.3"
