--- a/package.json
+++ b/package.json
@@ -2,28 +2,23 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-svelte": "^4.1.0",
     "rollup-plugin-uglify": "^4.0.0",
     "serve": "^9.1.0",
-    "svelte": "^2.9.1",
-    "cross-env": "^5.2.0",
-    "rollup-plugin-scss": "^0.4.0"
-  },
-  "webpack-scripts": {
-    "build": "cross-env NODE_ENV=production webpack && yarn transpile",
-    "transpile": "cross-env NODE_ENV=production buble dist/bundle.js > dist/x.js && mv dist/x.js dist/bundle.js",
-    "dev": "yarn run clean && webpack-serve --content public --hot --port 8000",
-    "clean": "rimraf public/bundle*"
+    "svelte": "^2.9.1"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf dist/* && rollup -c",
     "autobuild": "rollup -c -w",
-    "dev": "rimraf public/fsss.* && run-p start autobuild",
+    "dev": "npm run clean && run-p start autobuild",
+    "clean": "rimraf public/fsss.* && rimraf public/bundle.*",
     "start": "serve public --listen 8000"
   },
   "dependencies": {
