--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "fsss",
   "version": "1.0.1",
-  "main": "src/main.js",
+  "main": "dist/fsss.min.js",
+  "module": "src/main.js",
   "devDependencies": {
     "cross-env": "^5.2.0",
     "npm-run-all": "^4.1.3",
